@@ -226,6 +226,34 @@ $wgOptionalMessages = array(
 	'iranian-calendar-m10',
 	'iranian-calendar-m11',
 	'iranian-calendar-m12',
+	'hebrew-calendar-m1',
+	'hebrew-calendar-m2',
+	'hebrew-calendar-m3',
+	'hebrew-calendar-m4',
+	'hebrew-calendar-m5',
+	'hebrew-calendar-m6',
+	'hebrew-calendar-m6a',
+	'hebrew-calendar-m6b',
+	'hebrew-calendar-m7',
+	'hebrew-calendar-m8',
+	'hebrew-calendar-m9',
+	'hebrew-calendar-m10',
+	'hebrew-calendar-m11',
+	'hebrew-calendar-m12',
+	'hebrew-calendar-m1-gen',
+	'hebrew-calendar-m2-gen',
+	'hebrew-calendar-m3-gen',
+	'hebrew-calendar-m4-gen',
+	'hebrew-calendar-m5-gen',
+	'hebrew-calendar-m6-gen',
+	'hebrew-calendar-m6a-gen',
+	'hebrew-calendar-m6b-gen',
+	'hebrew-calendar-m7-gen',
+	'hebrew-calendar-m8-gen',
+	'hebrew-calendar-m9-gen',
+	'hebrew-calendar-m10-gen',
+	'hebrew-calendar-m11-gen',
+	'hebrew-calendar-m12-gen',
 );
 
 /** EXIF messages, which may be set as optional in several checks, but are generally mandatory */
